[tool.poetry]
name = "ultimate-proxy-collector"
version = "1.0.0"
description = "Production-grade automated proxy collector for GitHub Actions"
authors = ["DevOps Team"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.0"
asyncio = "^3.4.3"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0"
redis = "^5.0.0"
httpx = "^0.25.0"
structlog = "^24.1.0"
colorama = "^0.4.6"
python-dotenv = "^1.0.0"
maxminddb = "^2.6.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
ruff = "^0.1.8"
black = "^23.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
strict = true

[tool.ruff]
line-length = 120
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"